styles/typography.css
/* ... */
/* hyperlinks */
a { /* TODO: migrate ARIA to accessibility.css */
  padding-inline: 0.1682ch;
  text-underline-offset: 0;
  text-decoration-thickness: .168em;
  text-decoration-color: transparent;
  -webkit-text-decoration-skip-ink: none;
          text-decoration-skip-ink: none;
}
a:hover {
  text-decoration-color: ActiveText;
}
a::before, a::after {
  text-decoration: none;
  margin-right: 0.1618em;
}

a.logo {
  font-size: 2em;
  line-height: 2em;
  white-space: nowrap;
  margin-bottom: 0.2em
}
nav li a:hover {
  font-weight: bolder;
  text-decoration: none;
}

hr { /* https://www.lifewire.com/styling-horizontal-rule-tag-3466399 */
  color: currentColor;
  margin: 3.612em auto;
  background-color: currentColor;
}

/* CSS3 Lists
 * https://drafts.csswg.org/css-lists-3/
 * Styling lists - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Styling_lists
 */
dl, ol, ul {
  /* max-width: 70ch; */
  width: 83%;
  text-align: start;
  font-size: var(--larger);
  margin: var(--margin-collapse-bugfix) auto var(--font-size);
  /* padding: var(--margin-collapse-bugfix) 0 var(--margin-collapse-bugfix) var(--font-size); */
  list-style-position: inside;
}
dl dl, ol ol, ol ul, ul ol, ul ul {
  margin-bottom: var(--margin-collapse-bugfix);
  display: inherit;
  background: yellow;
  width: auto;
}
nav > details > ul
  {}
dt {
  font-weight: bolder;
  line-height: 3.6182ch;
  padding: var(--margin-collapse-bugfix) 1ch;
  margin: 0.6182ch 0 var(--margin-collapse-bugfix);
}
dd, li {}
dd, li li {
  font-size: var(--smaller);
}
dd dd:first-of-type, li li:first-of-type {

}
nav li, nav li {
}
nav dd, nav li li
  { font-size: 1em }
nav dt + dd, nav li li:first-of-type
  { margin-top: 0 }
details > dl, details > dd,
details > ol li, details > ul li
  {}

abbr {
  /* http://webtypography.net/3.2.2 */
  font-style: normal;
  font-variant-caps: all-small-caps;
  font-variant-numeric: oldstyle-nums;
}
abbr[title] {
  border-bottom: 0;
  text-decoration-skip-ink: none;
  text-decoration: underline dotted;
}

del, s {
  opacity: 0.618;
  text-decoration: line-through;
  text-decoration-style: wavy
}
del {
  text-decoration-color: ActiveText
}
ins {
  text-decoration-color: HighlightText
}

del::before
  { content: '−' /* https://en.wikipedia.org/wiki/Dash */ }

ins::before
  { content: '+' }

em {
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/text-emphasis */
  padding-inline: calc(.1682ch * var(--GOLDEN-RATIO));
}
b, strong
  { font-weight: bolder }
p {
  display: flow-root; /* https://css-tricks.com/display-flow-root/ */
  /* https://www.edgee.net/what-font-size-should-you-use-for-body-copy-text-and-why/ */
    /* 16x0.81=13 */
}
p, q, address {
  max-width: 80ch;
  padding: 0 var(--line-height);
  margin: var(--margin-collapse-bugfix) auto var(--line-height);
}

pre, code, kbd, samp {
  padding: 0 0.1618em;
  background:  ButtonFace;
}
pre {
  overflow: auto;
  text-align: initial;
  margin: var(--p-margin);
}
code {
  white-space: nowrap;
}
pre code {
  margin: var(--line-height);
  font-size:  var(--smaller);
}
header code, h1 code {
  font-variant-caps: initial;
}

figcaption {
  font-size: 86%;
  font-style: italic;
}

/* quotes */
q {
  font-style: italic;
  vertical-align: top;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
   /*
    - https://tympanus.net/codrops/css_reference/quotes/
    - https://developer.mozilla.org/en-US/docs/Web/CSS/quotes
  */
  quotes:
    "\201C" "\201D"
    "\2018" "\2019"

    "\201C" "\201D"
    "\2018" "\2019"

    "\201C" "\201D"
    "\2018" "\2019"
  ;


/* Two pairs: */
  quotes: ““” “”” “‘” “’”;
}
q q {
}
p q, q q {
  padding-inline: initial;
  font-size: var(--smaller);
}

q::before
  {}
q::after
  { content: close-quote }

/*
  - http://webtypography.net/2.3.3
  - https://isotropic.co/the-best-css-styling-for-blockquotes/
  - https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/
*/
blockquote {
  /* http://webtypography.net/2.3.3 */
  opacity: 85%;
  display: block;
  padding-block-start: 3ch;
  font-style: italic;
  quotes: "\201C""\201D";
  border: 0.01618em solid;
  margin: var(--p-margin);
  font-size: var(--larger);
  margin-block-start: var(--line-height);
}
blockquote::before {
  top: 1ch;
  left: 2ch;
  /* width: 100%; */
  opacity: 80%;
  line-height: 1.6182ch;
  position: relative;
  content: open-quote;
  overflow: hidden;
  /* background: pink; */
  display: block;
  width: 1ch;
  height: 1ch;
  text-align: start;
  transform: scale(8);
}
blockquote::after {
  opacity: 40%;
  content: '⤷\2002' attr(cite);
  margin-block-end: 1ch;
}

cite {
  opacity: 75%;
  font-size: var(--smaller);
  white-space: nowrap;
  display: inline-flex;
}
cite::before{
  content: '-'; /* https://en.wikipedia.org/wiki/Dash */
}
blockquote cite, q cite
  {}
blockquote cite {
  font-size: var(--line-height);
}
q cite {
  max-width: 21ch;
  overflow: hidden;
  vertical-align: middle;
  text-overflow: ellipsis;
  font-size: var(--smallest);
}

small
  { font-size: var(--smaller) }

sub, sup { /* Prevent `sub` and `sup` elements from affecting the line height in all browsers. */vertical-align: unset;}
sup {
  position: relative;
  top: -.418em;
}
sub {
  position: relative;
  top: 0.418em;
}

svg
 { vertical-align: middle }

address {}

/* Table styling
 */
table {}
caption {
  padding: 1em 0;
  font-weight: bold;
  background: Canvas;
  font-size: var(--larger);
  line-height: var(--largest);
}


/* details */
details {
  margin: var(--margin);
  text-align: var(--text-align);
  padding: 0 0 0 var(--line-height);
}
nav details, nav summary {
  margin: 0;
  padding: 0;
}
body > header details
  { padding-left: 0 }
nav  details {
  display: list-item;
  display: list-item;
  list-style-type: '😕';
}
nav > details[open] {
  list-style-type: '😊';
}

/* summary */

summary {
  font-weight: bolder;
  padding-bottom: 0.618em;
  font-size: var(--larger);
  margin-left: -1.618em /* compensate for <details> padding */;
}
/* ... */

